New in 0.9.10:
--------------

* Add '%reflection' option for functions, for compile-time operations on
  syntax.
* At the REPL, "it" now refers to the previous expression

New in 0.9.9:
-------------

* Apply functions by return type, rather than with arguments:
  "t <== f" means "apply f with arguments such that it returns a value
  of type t"
* Allow the result type of a rewrite to be specified
* Allow names to be attached to provisional definitions
  lhs ?= {name} rhs -- generates a lemma called 'name' which makes the
  types of the lhs and rhs match. {name} is optional - a unique name is
  generated if it is absent.
* Experimental LLVM backend
* Added Data.HVect module
* Fix fromInteger to take an Integer, rather than an Int
* Integer literals for Fin
* Renamed O to Z, and fO to fZ
* Swapped Vect arguments, now Vect : Nat -> Type -> Type
* Added DecEq instances
* Add 'equiv' tactic, which rewrites a goal to an equivalent (convertible) goal

Internal changes

* Add annotation for unification traces
* Add 'mrefine' tactic for refining by matching against a type
* Type class resolution fixes
* Much faster coverage checking

New in 0.9.8:
-------------

User visible changes:

* Added "rewrite ... in ..." construct
* Allow type class constraints in 'using' clauses
* Renamed EFF to EFFECT in Effect package
* Experimental Java backend
* Tab completion in REPL
* Dynamic loading of C libraries in the interpreter
* Testing IO actions at the REPL with :x command
* Improve rendering of :t
* Fixed some INTERNAL ERROR messages

Internal changes:

* Fix non-linear pattern checking
* Improved name disambiguation
* More flexible unification and elaboration of lambdas
* Various unification and totality checking bug fixes

New in 0.9.7:
-------------

User visible changes:

* 'implicit' keyword, for implicit type conversion
* Added Effects package
* Primitives for 8,16,32 and 64 bit integers

Internal changes:
