@@ -35,6 +35,7 @@ idrisDef = haskellDef {
                     "where", "with", "syntax", "proof", "postulate",
                     "using", "namespace", "class", "instance",
                     "public", "private", "abstract", "implicit",
+                    "quoteGoal",
                     "Int", "Integer", "Float", "Char", "String", "Ptr",
                     "Bits8", "Bits16", "Bits32", "Bits64",
                     "Bits8x16", "Bits16x8", "Bits32x4", "Bits64x2"]
