@@ -1,0 +1,4 @@
+test030a.idr:12:Can't unify IsJust (Just x) with IsJust (prove (getProof x))
+
+Specifically:
+	Can't unify Just x with Nothing
